# ragapp

./: .gitignore  README.md  pyproject.toml
src/db/: ocr.py  第2回皐槻祭パンフレット_全体-圧縮.txt  第2回皐槻祭パンフレット_全体-圧縮_formatted.txt
src/ragapp/: __init__.py  streamlit_app.py
