[project]
name = "ragapp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hokkey621", email = "ibukiz621@yahoo.co.jp" }
]
dependencies = [
    "streamlit>=1.34.0",
    "google-generativeai>=0.5.3",
    "scikit-learn>=1.4.2",
    "pytesseract>=0.3.10",
    "pillow>=10.3.0",
    "pdf2image>=1.17.0",
    "pyocr>=0.8.5",
    "google-cloud>=0.34.0",
    "google-cloud-vision>=3.7.2",
    "opencv-python>=4.9.0.80",
    "watchdog>=4.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ragapp"]
